--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         skills.
       </p>
     </section>
-    <section class="text-white lg:flex">
+    <div class="text-white lg:flex">
       <section class="px-6 py-6 bg-cyan w-77 lg:w-1/2 lg:px-10 lg:rounded-bl-lg">
         <h2 class="mb-5 text-xl text-white">Monthly Subscription</h2>
         <div>
@@ -55,7 +55,7 @@
           New videos every week.
         </p>
       </section>
-    </section>
+    </div>
   </main>
 
   <footer class="font-mono lg:mt-1">
