--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
     <p class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-        href="https://abdul-coder-maker.github.io/" target="_blank" rel="noopener">Abdulrahman Nasser</a>.
+        href="https://twitter.com/AbdulrahmanDev" target="_blank" rel="noopener">Abdulrahman Nasser</a>.
     </p>
   </footer>
 </body>
